# una_tech_test

./: .gitignore  README.md  glucose.db  pyproject.toml
app/: __init__.py  config.py  models.py  routes.py
migrations/versions/: 676f4b8d3d40_create_glucose_levels_table.py  7f02a64dac04_create_users_data_table.py
